# shiori

./: .editorconfig  .gitignore  README.md  eslint.config.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.tanstack/tmp/: bed70aa1-c37e48d7864b365d7fe3a0c70997d3bc  bed70aa1-efaf33d1a3e33f780eed8cee8d0b3981
src/: main.css  main.tsx  routeTree.gen.ts
src-tauri/: .gitignore  .taurignore  2  Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: dialog.json  fs.json  opener.json  store.json
src-tauri/migrations/: 20251222074739_init.sql
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/api/: hugging_face.rs  mod.rs
src-tauri/src/features/: mod.rs
src-tauri/src/features/chat/: commands.rs  entities.rs  mod.rs
src-tauri/src/features/model/: commands.rs  mod.rs  speech_to_text.rs  text_generation.rs
src-tauri/src/features/summarize/: audio.rs  commands.rs  entities.rs  language.rs  mod.rs
src-tauri/src/security/: mod.rs  secret_manager.rs
src-tauri/src/state/: download.rs  mod.rs
src-tauri/src/utils/: tauri.rs
src/api/: download.ts  model.ts  summarize.ts
src/components/: ErrorAlert.tsx  LocalModelSearch.tsx
src/components/ui/: alert-dialog.tsx  dialog.tsx  dropdown-menu.tsx  select.tsx  sidebar.tsx  tooltip.tsx
src/enums/: accelerator.ts  download-status.ts  downloadStatus.ts  hardware-accelerator.ts  index.ts  llmProvider.ts  setup-step.ts  setupStep.ts  speech-to-text-model.ts  text-generation-provider.ts  whisper-model.ts  whisperModel.ts
src/hooks/: use-settings.ts
src/lib/: validation.ts
src/routes/: __root.tsx  index.tsx  main.$summaryId.tsx  main.index.tsx  main.progress.tsx  main.tsx  setup.tsx
src/routes/setup/: index.tsx
src/routes/setup/_components/: ConfirmStep.tsx  DirectoryStep.tsx  DownloadStep.tsx  HardwareModelStep.tsx  TokenStep.tsx  WelcomeStep.tsx
src/stores/: app-store.ts  download-store.ts  settings-store.ts  setup-store.ts  setupStore.ts  summary-store.ts
src/utils/: tauri.ts
