[package]
name = "shiori"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "shiori"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
reqwest = { version = "0.12", features = ["blocking"] }
zip = "2.2"

[dependencies]
anyhow = "1.0.100"
async-stream = "0.3.6"
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["serde"] }
dashmap = "6.1.0"
futures-util = "0.3.31"
infer = "0.19.0"
keyring = { version = "3.6.3", features = ["windows-native"] }
once_cell = "1.21.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
reqwest-eventsource = "0.6.0"
rfd = "0.16.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10.6"
sqlx = { version = "0.8.6", features = [
  "sqlite",
  "runtime-tokio-native-tls",
  "macros",
  "chrono",
  "uuid",
] }
strum = "0.27.2"
strum_macros = "0.27.2"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1.17"
tokio-util = "0.7.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["json"] }
tracing-appender = "0.2.4"
url = "2.5.7"
urlencoding = "2.1"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
whisper-rs = { version = "0.15.1", features = ["vulkan", "tracing_backend"] }
